# Parallel-Computing-and-Algorithms-X033537-Project

./: .gitignore  LICENSE  README.md
OpenCl_DNN/: CMakeLists.txt  README  run.sh
OpenCl_DNN/Debug/: makefile  sources.mk
OpenCl_DNN/Debug/src/activations/: subdir.mk
OpenCl_DNN/Debug/src/cost/: subdir.mk
OpenCl_DNN/Debug/src/hiddenlayer/: subdir.mk
OpenCl_DNN/Debug/src/nnet/: subdir.mk
OpenCl_DNN/cmake/: FindOpenCL.cmake
OpenCl_DNN/demo/: demo-console.py  demo.nnet  demo.py  mnist.py  nnet.py  output.nnet
OpenCl_DNN/src/: .cproject  .project  CMakeLists.txt  main.cpp
OpenCl_DNN/src/activations/: Activation.cpp  Activation.h  CMakeLists.txt  Sigmoid.cpp  Sigmoid.h  TanH.cpp  TanH.h
OpenCl_DNN/src/cl_intf/: CMakeLists.txt  ClInterface.cpp  ClInterface.hpp  ClInterface.inl  OpenCL.cpp  OpenCL.cpp.orig  OpenCL.hpp  OpenCLPort.cpp  OpenCLPort.h  util.cpp  util.hpp
OpenCl_DNN/src/cl_prog/: gpu_kernel.cl  kernels.cl  matmul.cl  sigmoid.cl  tanh.cl  vectoradd.cl
OpenCl_DNN/src/cost/: CMakeLists.txt  Cost.cpp  Cost.h  Cost.h~  CrossEntropy.cpp  CrossEntropy.h  MSE.cpp  MSE.h
OpenCl_DNN/src/hiddenlayer/: CMakeLists.txt  HiddenLayer.cpp  HiddenLayer.h
OpenCl_DNN/src/math/: CLMatrix.cpp  CLMatrix.hpp
OpenCl_DNN/src/nnet/: CMakeLists.txt  FeedForwardNN.cpp  FeedForwardNN.cpp.orig  FeedForwardNN.h  FeedForwardNN.h.orig  GPUFeedForward.cpp
OpenCl_DNN/src/wrapper/: NeuralNetwork.cpp  NeuralNetwork.h  NeuralNetwork.py  makefile  test.py
OpenCl_DNN/tests/: testall.cpp  testall.cpp.orig
OpenCl_DNN/tests/.ollld/: CMakeLists.txt  testall.cpp
OpenCl_DNN/tests/src/: CMakeLists.txt  testall.cpp
data/heini/: C:\nppdf32Log\debuglog.txt  ParallelAlgo
data/heini/tex/: intro.fls  intro.tex  main.aux  main.tex
documentation/: bibtex.bib  bibtex.bib~  document.aux  document.bbl  document.blg  document.tex  document.toc  use.tex
documentation/.texpadtmp/: document.aux  document.bbl  document.blg  document.lof  document.out  document.toc  use.aux
documentation/.texpadtmp/content/: anhang.aux  examples.aux  project.aux
documentation/.texpadtmp/framework/: abbreviations.aux  preamble.aux  title.aux  usepackage.aux
documentation/content/: anhang.aux  examples.aux  examples.tex  project.aux  project.tex
documentation/framework/: abbreviations.aux  preamble.aux  preamble.tex  title.aux  title.tex  usepackage.tex
python_test/: NeuralNetwork.py  emergency.py  emergency_mnist.py  write_file.py
